:memo: update nb

--- a/notebooks/fp/fp_api_news_articles.ipynb
+++ b/notebooks/fp/fp_api_news_articles.ipynb
@@ -10,6 +10,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "c4389aff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting dotenv\n",
+      "  Downloading dotenv-0.9.9-py2.py3-none-any.whl.metadata (279 bytes)\n",
+      "Collecting python-dotenv (from dotenv)\n",
+      "  Using cached python_dotenv-1.1.0-py3-none-any.whl.metadata (24 kB)\n",
+      "Downloading dotenv-0.9.9-py2.py3-none-any.whl (1.9 kB)\n",
+      "Using cached python_dotenv-1.1.0-py3-none-any.whl (20 kB)\n",
+      "Installing collected packages: python-dotenv, dotenv\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2/2\u001b[0m [dotenv]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed dotenv-0.9.9 python-dotenv-1.1.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "3a333b11",
    "metadata": {},
@@ -80,11 +107,18 @@
     "'''\n",
     "import requests\n",
     "# from newspaper import Article\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "# Replace with your actual GNews API key\n",
-    "API_KEY = 'ec0a4aa7b16bde611c827d31ef9a1c99'\n",
+    "# Load environment variables from .env file\n",
+    "load_dotenv()\n",
+    "\n",
+    "# Get GNEWS_API_KEY from environment variables\n",
+    "API_KEY = os.getenv(\"GNEWS_API_KEY\")\n",
+    "\n",
     "# GNews API endpoint\n",
     "url = 'https://gnews.io/api/v4/search'\n",
+    "\n",
     "# Define search parameters\n",
     "params = {\n",
     "    'q': '\"Renewable Energy\" AND \"Energy Storage\"',\n",
