--- a/notebooks/News_Articles/Cleantech.ipynb
+++ b/notebooks/News_Articles/Cleantech.ipynb
@@ -1782,8 +1782,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b6aeb7d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Clean_Comment           0\n",
+       "Date                    0\n",
+       "distilbert_neg_score    0\n",
+       "distilbert_pos_score    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"/Users/enrique/Downloads/TwitterDays_with_sentiment_0613_bcsv.csv\", sep=\";\")\n",
+    "df.head()\n",
+    "\n",
+    "\n",
+    "df['Date'] = pd.to_datetime(df['Date'], errors='coerce')\n",
+    "df.head()\n",
+    "\n",
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d3891d91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"/Users/enrique/Downloads/TwitterDays_with_sentiment_0613_dates.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23853f89",
    "metadata": {},
    "outputs": [],
    "source": []
